--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">F2F</string>
 
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">F2F</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="name">Name</string>
+    <string name="confirm">Confirm</string>
 </resources>
