--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="name">Name</string>
     <string name="confirm">Confirm</string>
+    <string name="bio">Bio</string>
 </resources>
